--- a/css/courses.css
+++ b/css/courses.css
@@ -1,7 +1,7 @@
 .version.courses /* version checker */
 {
-	color: #0000F0;
-	background-color: #F05019;
+	color: #00001E;
+	background-color: #C30EFF;
 }
 
 .html
@@ -13,14 +13,13 @@
 {
 	z-index: 1;
 	width: 680px;
-	min-height: 498.94999999999993px;
+	min-height: 499px;
 	-pie-box-shadow: 0px 0px 10px 3px #E5E5E5;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 0px 10px rgba(0,0,0,0.1);
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -28,7 +27,7 @@
 #page_position_content
 {
 	margin-bottom: -15px;
-	padding-top: 59px;
+	padding-top: 5px;
 	width: 0.01px;
 }
 
@@ -498,18 +497,11 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u226
+#u1437
 {
-	z-index: 104;
-	top: 5px;
-	left: 50%;
-	margin-left: -314px;
-}
-
-#u226:hover
-{
-	min-height: 0px;
-	margin: 0px 0px 0px -314px;
+	z-index: 134;
+	width: 34px;
+	margin-left: 27px;
 }
 
 #u393-4
@@ -518,12 +510,13 @@
 	width: 639px;
 	min-height: 34px;
 	background-color: transparent;
-	line-height: 31px;
 	color: #14988B;
 	text-align: center;
 	font-size: 26px;
+	line-height: 31px;
 	font-weight: bold;
 	margin-left: 21px;
+	margin-top: 15px;
 	position: relative;
 }
 
@@ -540,14 +533,14 @@
 	position: relative;
 }
 
-#u440
+#u1474
 {
 	z-index: 12;
 	width: 99px;
 	background-color: transparent;
 }
 
-#u440_img
+#u1474_img
 {
 	vertical-align: bottom;
 }
@@ -600,7 +593,7 @@
 
 #u321-4
 {
-	z-index: 105;
+	z-index: 104;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -617,7 +610,7 @@
 
 #u334-26
 {
-	z-index: 109;
+	z-index: 108;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
