--- a/css/lab-members.css
+++ b/css/lab-members.css
@@ -1,7 +1,7 @@
 .version.lab_members /* version checker */
 {
-	color: #0000E5;
-	background-color: #4F9198;
+	color: #0000FD;
+	background-color: #7115CA;
 }
 
 .html
@@ -13,13 +13,14 @@
 {
 	z-index: 1;
 	width: 680px;
-	min-height: 499px;
+	min-height: 498.9499999999998px;
 	-pie-box-shadow: 0px 0px 10px 3px #E5E5E5;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 0px 10px rgba(0,0,0,0.1);
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: #FFFFFF;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -27,7 +28,7 @@
 #page_position_content
 {
 	margin-bottom: -15px;
-	padding-top: 59px;
+	padding-top: 5px;
 	width: 0.01px;
 }
 
@@ -497,18 +498,11 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u226
+#u1437
 {
-	z-index: 365;
-	top: 5px;
-	left: 50%;
-	margin-left: -314px;
-}
-
-#u226:hover
-{
-	min-height: 0px;
-	margin: 0px 0px 0px -314px;
+	z-index: 395;
+	width: 34px;
+	margin-left: 27px;
 }
 
 #u394-4
@@ -517,12 +511,13 @@
 	width: 639px;
 	min-height: 34px;
 	background-color: transparent;
-	line-height: 31px;
 	color: #14988B;
 	text-align: center;
 	font-size: 26px;
+	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
+	margin-top: 15px;
 	position: relative;
 }
 
@@ -534,7 +529,6 @@
 	background-color: transparent;
 	color: #000000;
 	margin-left: 20px;
-	margin-top: 1px;
 	position: relative;
 }
 
@@ -712,7 +706,7 @@
 
 #u321-4
 {
-	z-index: 366;
+	z-index: 365;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -729,7 +723,7 @@
 
 #u334-26
 {
-	z-index: 370;
+	z-index: 369;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
