--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -35,10 +35,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -83,10 +83,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -131,10 +131,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -179,10 +179,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -227,10 +227,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -275,10 +275,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -298,12 +298,6 @@
 	opacity: 1;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	filter: alpha(opacity=100);
-}
-
-#u1394,#u151,#u237,#u165,#u144,#u158,#u172
-{
-	background-color: transparent;
-	position: relative;
 }
 
 #u173
@@ -336,10 +330,10 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 19px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -374,20 +368,19 @@
 	cursor: pointer;
 }
 
-#u226
+#u1394,#u151,#u237,#u165,#u144,#u158,#u172,#u1437
 {
 	background-color: transparent;
-	overflow: hidden;
-	position: fixed;
+	position: relative;
 }
 
 #u321-4
 {
 	background-color: transparent;
 	color: #7F7F7F;
-	line-height: 11px;
 	text-align: left;
 	font-size: 9px;
+	line-height: 11px;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	font-style: italic;
 	position: relative;
@@ -403,9 +396,9 @@
 {
 	background-color: transparent;
 	color: #7F7F7F;
-	line-height: 11px;
 	text-align: right;
 	font-size: 9px;
+	line-height: 11px;
 	font-style: italic;
 	position: relative;
 }
