--- a/css/resources.css
+++ b/css/resources.css
@@ -1,7 +1,7 @@
 .version.resources /* version checker */
 {
-	color: #0000F9;
-	background-color: #B35806;
+	color: #0000F8;
+	background-color: #675B10;
 }
 
 .html
@@ -13,14 +13,13 @@
 {
 	z-index: 1;
 	width: 680px;
-	min-height: 434.75px;
+	min-height: 435px;
 	-pie-box-shadow: 0px 0px 10px 3px #E5E5E5;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 0px 10px rgba(0,0,0,0.1);
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -28,13 +27,13 @@
 #page_position_content
 {
 	margin-bottom: -15px;
-	padding-top: 59px;
+	padding-top: 5px;
 	width: 0.01px;
 }
 
 #u322-3
 {
-	z-index: 157;
+	z-index: 158;
 	width: 680px;
 	min-height: 50px;
 	top: 0px;
@@ -44,7 +43,7 @@
 
 #menuu136
 {
-	z-index: 160;
+	z-index: 161;
 	width: 586px;
 	top: -1px;
 	left: 50%;
@@ -498,18 +497,11 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u226
+#u1437
 {
-	z-index: 203;
-	top: 5px;
-	left: 50%;
-	margin-left: -314px;
-}
-
-#u226:hover
-{
-	min-height: 0px;
-	margin: 0px 0px 0px -314px;
+	z-index: 234;
+	width: 34px;
+	margin-left: 27px;
 }
 
 #u391-4
@@ -518,12 +510,13 @@
 	width: 640px;
 	min-height: 34px;
 	background-color: transparent;
-	line-height: 31px;
 	color: #14988B;
 	text-align: center;
 	font-size: 26px;
+	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
+	margin-top: 14px;
 	position: relative;
 }
 
@@ -531,7 +524,7 @@
 {
 	width: 0.01px;
 	margin-left: 26px;
-	margin-top: 10px;
+	margin-top: 11px;
 }
 
 #pu1045-4
@@ -549,110 +542,78 @@
 	background-color: transparent;
 	color: #000000;
 	text-decoration: none;
-	line-height: 14px;
 	font-size: 12px;
+	line-height: 14px;
 	font-weight: bold;
 	position: relative;
 }
 
-#pu1406
+#ppu1410
 {
 	width: 0.01px;
 }
 
-#u1406
+#pu1410
 {
-	z-index: 124;
-	width: 145px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
+	width: 0.01px;
 	margin-right: -10000px;
 }
 
 #u1410
 {
-	z-index: 125;
+	z-index: 124;
 	width: 143px;
+	height: 167px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
 	background-color: #F7FFFF;
-	padding-bottom: 61px;
 	position: relative;
-}
-
-#u1407
-{
-	z-index: 126;
-	overflow: hidden;
-	position: relative;
-	width: 119px;
-	margin-right: -10000px;
-	margin-top: 61px;
-	left: 12px;
 }
 
 #u1409-8
 {
-	z-index: 127;
+	z-index: 125;
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
-	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
+	line-height: 14px;
 	font-weight: normal;
 	margin-left: 1px;
 	margin-top: 3px;
 	position: relative;
 }
 
-#u1412
+#pu1416
 {
-	z-index: 135;
-	width: 145px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
+	width: 0.01px;
 	margin-right: -10000px;
-	left: 154px;
+	margin-left: 154px;
 }
 
 #u1416
 {
-	z-index: 136;
+	z-index: 133;
 	width: 143px;
+	height: 167px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
 	background-color: #F7FFFF;
-	padding-bottom: 47px;
 	position: relative;
-}
-
-#u1413
-{
-	z-index: 137;
-	overflow: hidden;
-	position: relative;
-	width: 71px;
-	margin-right: -10000px;
-	margin-top: 28px;
-	left: 36px;
 }
 
 #u1415-8
 {
-	z-index: 138;
+	z-index: 134;
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
-	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
+	line-height: 14px;
 	font-weight: normal;
 	margin-top: 3px;
 	position: relative;
@@ -660,7 +621,7 @@
 
 #u1417
 {
-	z-index: 146;
+	z-index: 142;
 	width: 145px;
 	border-style: none;
 	border-color: transparent;
@@ -673,36 +634,25 @@
 
 #u1421
 {
-	z-index: 147;
+	z-index: 143;
 	width: 143px;
+	height: 167px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
 	background-color: #F7FFFF;
-	padding-bottom: 48px;
 	position: relative;
-}
-
-#u1418
-{
-	z-index: 148;
-	overflow: hidden;
-	position: relative;
-	width: 118px;
-	margin-right: -10000px;
-	margin-top: 47px;
-	left: 11px;
 }
 
 #u1420-8
 {
-	z-index: 149;
+	z-index: 144;
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
-	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
+	line-height: 14px;
 	font-weight: normal;
 	margin-top: 2px;
 	position: relative;
@@ -737,6 +687,44 @@
 {
 	font-size: 10px;
 	line-height: 12px;
+}
+
+#pu1499
+{
+	width: 0.01px;
+	margin-left: 39px;
+	margin-top: -224px;
+}
+
+#u1499
+{
+	z-index: 156;
+	width: 118px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 35px;
+}
+
+#u1487
+{
+	z-index: 152;
+	width: 71px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 179px;
+}
+
+#u1493
+{
+	z-index: 154;
+	width: 119px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 20px;
+	left: 308px;
 }
 
 #pu321-4
