--- a/css/links.css
+++ b/css/links.css
@@ -1,7 +1,7 @@
 .version.links /* version checker */
 {
-	color: #000012;
-	background-color: #CB9BD2;
+	color: #0000F5;
+	background-color: #1A03C0;
 }
 
 .html
@@ -45,7 +45,7 @@
 #menuu136
 {
 	z-index: 881;
-	width: 586px;
+	width: 699px;
 	top: -1px;
 	left: 50%;
 	margin-left: -266px;
@@ -242,12 +242,76 @@
 	margin: 0px -10000px 0px 0px;
 }
 
+#u1528
+{
+	width: 111px;
+	min-height: 50px;
+	margin-right: -10000px;
+	left: 247px;
+}
+
+#u1529
+{
+	width: 111px;
+	padding-bottom: 31px;
+}
+
+#u1529:hover
+{
+	width: 111px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1529.MuseMenuActive
+{
+	width: 111px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1532-4
+{
+	width: 104px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 15px;
+	left: 3px;
+}
+
+#u1529:hover #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1529:active #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1529.MuseMenuActive #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
 #u165
 {
 	width: 103px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 247px;
+	left: 360px;
 }
 
 #u168
@@ -311,7 +375,7 @@
 	width: 70px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 352px;
+	left: 465px;
 }
 
 #u145
@@ -375,7 +439,7 @@
 	width: 113px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 424px;
+	left: 537px;
 }
 
 #u161
@@ -439,7 +503,7 @@
 	width: 47px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 539px;
+	left: 652px;
 }
 
 #u173
@@ -500,7 +564,7 @@
 
 #u1437
 {
-	z-index: 954;
+	z-index: 960;
 	width: 34px;
 	margin-left: 27px;
 }
@@ -665,7 +729,7 @@
 
 #u321-4
 {
-	z-index: 924;
+	z-index: 930;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -682,7 +746,7 @@
 
 #u334-26
 {
-	z-index: 928;
+	z-index: 934;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
