--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -156,6 +156,54 @@
 	filter: alpha(opacity=100);
 }
 
+#u1529
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	opacity: 0.5;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	filter: alpha(opacity=50);
+	position: relative;
+}
+
+#u1529:hover
+{
+	opacity: 0.9;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+	filter: alpha(opacity=90);
+}
+
+#u1532-4
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 16px;
+	line-height: 19px;
+	font-family: open-sans, sans-serif;
+	font-weight: 400;
+	position: relative;
+}
+
+#u1529:hover #u1532-4
+{
+	background-color: transparent;
+	opacity: 0.8;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	filter: alpha(opacity=80);
+}
+
+#u238.MuseMenuActive #u240-4,#u1529:active #u1532-4
+{
+	background-color: transparent;
+	opacity: 1;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+}
+
 #u168
 {
 	border-style: none;
@@ -196,7 +244,7 @@
 	filter: alpha(opacity=80);
 }
 
-#u238.MuseMenuActive #u240-4,#u168:active #u171-4
+#u1529.MuseMenuActive #u1532-4,#u168:active #u171-4
 {
 	background-color: transparent;
 	opacity: 1;
@@ -318,7 +366,7 @@
 	filter: alpha(opacity=90);
 }
 
-#u1395.MuseMenuActive,#u154.MuseMenuActive,#u238.MuseMenuActive,#u168.MuseMenuActive,#u145.MuseMenuActive,#u161.MuseMenuActive,#u173.MuseMenuActive
+#u1395.MuseMenuActive,#u154.MuseMenuActive,#u238.MuseMenuActive,#u1529.MuseMenuActive,#u168.MuseMenuActive,#u145.MuseMenuActive,#u161.MuseMenuActive,#u173.MuseMenuActive
 {
 	opacity: 1;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -368,7 +416,7 @@
 	cursor: pointer;
 }
 
-#u1394,#u151,#u237,#u165,#u144,#u158,#u172,#u1437
+#u1394,#u151,#u237,#u1528,#u165,#u144,#u158,#u172,#u1437
 {
 	background-color: transparent;
 	position: relative;
