--- a/css/publications.css
+++ b/css/publications.css
@@ -1,7 +1,7 @@
 .version.publications /* version checker */
 {
-	color: #00000B;
-	background-color: #0CC43B;
+	color: #000012;
+	background-color: #2A1C03;
 }
 
 .html
@@ -48,7 +48,7 @@
 
 #u1437
 {
-	z-index: 898;
+	z-index: 904;
 	width: 34px;
 	margin-right: -10000px;
 	margin-top: 5px;
@@ -75,7 +75,7 @@
 #menuu136
 {
 	z-index: 825;
-	width: 586px;
+	width: 699px;
 	top: -1px;
 	left: 50%;
 	margin-left: -266px;
@@ -272,12 +272,76 @@
 	margin: 0px -10000px 0px 0px;
 }
 
+#u1528
+{
+	width: 111px;
+	min-height: 50px;
+	margin-right: -10000px;
+	left: 247px;
+}
+
+#u1529
+{
+	width: 111px;
+	padding-bottom: 31px;
+}
+
+#u1529:hover
+{
+	width: 111px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1529.MuseMenuActive
+{
+	width: 111px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1532-4
+{
+	width: 104px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 15px;
+	left: 3px;
+}
+
+#u1529:hover #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1529:active #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1529.MuseMenuActive #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
 #u165
 {
 	width: 103px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 247px;
+	left: 360px;
 }
 
 #u168
@@ -341,7 +405,7 @@
 	width: 70px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 352px;
+	left: 465px;
 }
 
 #u145
@@ -405,7 +469,7 @@
 	width: 113px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 424px;
+	left: 537px;
 }
 
 #u161
@@ -469,7 +533,7 @@
 	width: 47px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 539px;
+	left: 652px;
 }
 
 #u173
@@ -749,7 +813,7 @@
 
 #u321-4
 {
-	z-index: 868;
+	z-index: 874;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -766,7 +830,7 @@
 
 #u334-26
 {
-	z-index: 872;
+	z-index: 878;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
