--- a/css/resources.css
+++ b/css/resources.css
@@ -1,7 +1,7 @@
 .version.resources /* version checker */
 {
-	color: #0000F8;
-	background-color: #675B10;
+	color: #0000FC;
+	background-color: #F4CE4C;
 }
 
 .html
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 680px;
-	min-height: 435px;
+	min-height: 426px;
 	-pie-box-shadow: 0px 0px 10px 3px #E5E5E5;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 0px 10px rgba(0,0,0,0.1);
 	background-image: none;
@@ -33,7 +33,7 @@
 
 #u322-3
 {
-	z-index: 158;
+	z-index: 157;
 	width: 680px;
 	min-height: 50px;
 	top: 0px;
@@ -43,8 +43,8 @@
 
 #menuu136
 {
-	z-index: 161;
-	width: 586px;
+	z-index: 160;
+	width: 699px;
 	top: -1px;
 	left: 50%;
 	margin-left: -266px;
@@ -241,12 +241,76 @@
 	margin: 0px -10000px 0px 0px;
 }
 
+#u1528
+{
+	width: 111px;
+	min-height: 50px;
+	margin-right: -10000px;
+	left: 247px;
+}
+
+#u1529
+{
+	width: 111px;
+	padding-bottom: 31px;
+}
+
+#u1529:hover
+{
+	width: 111px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1529.MuseMenuActive
+{
+	width: 111px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u1532-4
+{
+	width: 104px;
+	min-height: 19px;
+	margin-right: -10000px;
+	top: 15px;
+	left: 3px;
+}
+
+#u1529:hover #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1529:active #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u1529.MuseMenuActive #u1532-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 0px -10000px 0px 0px;
+}
+
 #u165
 {
 	width: 103px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 247px;
+	left: 360px;
 }
 
 #u168
@@ -310,7 +374,7 @@
 	width: 70px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 352px;
+	left: 465px;
 }
 
 #u145
@@ -374,7 +438,7 @@
 	width: 113px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 424px;
+	left: 537px;
 }
 
 #u161
@@ -438,7 +502,7 @@
 	width: 47px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 539px;
+	left: 652px;
 }
 
 #u173
@@ -499,7 +563,7 @@
 
 #u1437
 {
-	z-index: 234;
+	z-index: 239;
 	width: 34px;
 	margin-left: 27px;
 }
@@ -530,8 +594,8 @@
 #pu1045-4
 {
 	width: 0.01px;
+	padding-bottom: 0px;
 	margin-right: -10000px;
-	margin-top: 50px;
 }
 
 #u1045-4
@@ -548,30 +612,97 @@
 	position: relative;
 }
 
-#ppu1410
+#pu1618
 {
 	width: 0.01px;
+	margin-top: 10px;
 }
 
-#pu1410
-{
-	width: 0.01px;
-	margin-right: -10000px;
-}
-
-#u1410
+#u1618
 {
 	z-index: 124;
 	width: 143px;
-	height: 167px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
-	background-color: #F7FFFF;
+	background-color: #FFFFFF;
+	padding-bottom: 62px;
+	margin-bottom: -1px;
 	position: relative;
+	margin-right: -10000px;
 }
 
-#u1409-8
+#u1654
+{
+	z-index: 151;
+	width: 120px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 62px;
+	left: 12px;
+}
+
+#u1623
+{
+	z-index: 133;
+	width: 143px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #000000;
+	background-color: #FFFFFF;
+	padding-bottom: 52px;
+	margin-bottom: -1px;
+	position: relative;
+	margin-right: -10000px;
+	left: 154px;
+}
+
+#u1678
+{
+	z-index: 155;
+	width: 71px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 24px;
+	left: 36px;
+}
+
+#u1629
+{
+	z-index: 142;
+	width: 143px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #000000;
+	background-color: #FFFFFF;
+	padding-bottom: 52px;
+	margin-bottom: -1px;
+	position: relative;
+	margin-right: -10000px;
+	left: 308px;
+}
+
+#u1672
+{
+	z-index: 153;
+	width: 104px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 51px;
+	left: 19px;
+}
+
+#pu1619-8
+{
+	width: 0.01px;
+	margin-left: 1px;
+	margin-top: 3px;
+}
+
+#u1619-8
 {
 	z-index: 125;
 	width: 144px;
@@ -581,31 +712,11 @@
 	font-size: 12px;
 	line-height: 14px;
 	font-weight: normal;
-	margin-left: 1px;
-	margin-top: 3px;
 	position: relative;
-}
-
-#pu1416
-{
-	width: 0.01px;
 	margin-right: -10000px;
-	margin-left: 154px;
 }
 
-#u1416
-{
-	z-index: 133;
-	width: 143px;
-	height: 167px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #F7FFFF;
-	position: relative;
-}
-
-#u1415-8
+#u1624-8
 {
 	z-index: 134;
 	width: 144px;
@@ -615,38 +726,14 @@
 	font-size: 12px;
 	line-height: 14px;
 	font-weight: normal;
-	margin-top: 3px;
-	position: relative;
-}
-
-#u1417
-{
-	z-index: 142;
-	width: 145px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	padding-bottom: 0px;
 	position: relative;
 	margin-right: -10000px;
-	left: 308px;
+	left: 154px;
 }
 
-#u1421
+#u1626-8
 {
 	z-index: 143;
-	width: 143px;
-	height: 167px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #F7FFFF;
-	position: relative;
-}
-
-#u1420-8
-{
-	z-index: 144;
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
@@ -654,8 +741,9 @@
 	font-size: 12px;
 	line-height: 14px;
 	font-weight: normal;
-	margin-top: 2px;
 	position: relative;
+	margin-right: -10000px;
+	left: 308px;
 }
 
 #u1094-114
@@ -689,44 +777,6 @@
 	line-height: 12px;
 }
 
-#pu1499
-{
-	width: 0.01px;
-	margin-left: 39px;
-	margin-top: -224px;
-}
-
-#u1499
-{
-	z-index: 156;
-	width: 118px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 35px;
-}
-
-#u1487
-{
-	z-index: 152;
-	width: 71px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 179px;
-}
-
-#u1493
-{
-	z-index: 154;
-	width: 119px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 20px;
-	left: 308px;
-}
-
 #pu321-4
 {
 	width: 0.01px;
@@ -736,7 +786,7 @@
 
 #u321-4
 {
-	z-index: 204;
+	z-index: 209;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -753,7 +803,7 @@
 
 #u334-26
 {
-	z-index: 208;
+	z-index: 213;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
