--- a/css/gca.css
+++ b/css/gca.css
@@ -1,7 +1,7 @@
 .version.gca /* version checker */
 {
-	color: #000001;
-	background-color: #628C05;
+	color: #000004;
+	background-color: #42E4BE;
 }
 
 .html
@@ -44,7 +44,7 @@
 
 #u1437
 {
-	z-index: 166;
+	z-index: 160;
 	width: 34px;
 	margin-left: 7px;
 }
@@ -124,7 +124,7 @@
 #menuu136
 {
 	z-index: 87;
-	width: 699px;
+	width: 586px;
 	top: -1px;
 	left: 50%;
 	margin-left: -266px;
@@ -321,76 +321,12 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u1528
-{
-	width: 111px;
-	min-height: 50px;
-	margin-right: -10000px;
-	left: 247px;
-}
-
-#u1529
-{
-	width: 111px;
-	padding-bottom: 31px;
-}
-
-#u1529:hover
-{
-	width: 111px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1529.MuseMenuActive
-{
-	width: 111px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1532-4
-{
-	width: 104px;
-	min-height: 19px;
-	margin-right: -10000px;
-	top: 15px;
-	left: 3px;
-}
-
-#u1529:hover #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1529:active #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1529.MuseMenuActive #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
 #u165
 {
 	width: 103px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 360px;
+	left: 247px;
 }
 
 #u168
@@ -454,7 +390,7 @@
 	width: 70px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 465px;
+	left: 352px;
 }
 
 #u145
@@ -518,7 +454,7 @@
 	width: 113px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 537px;
+	left: 424px;
 }
 
 #u161
@@ -582,7 +518,7 @@
 	width: 47px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 652px;
+	left: 539px;
 }
 
 #u173
@@ -689,7 +625,7 @@
 
 #u321-4
 {
-	z-index: 136;
+	z-index: 130;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -706,7 +642,7 @@
 
 #u334-26
 {
-	z-index: 140;
+	z-index: 134;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
