--- a/css/research.css
+++ b/css/research.css
@@ -1,7 +1,7 @@
 .version.research /* version checker */
 {
-	color: #000009;
-	background-color: #C81FD8;
+	color: #0000F7;
+	background-color: #4C236D;
 }
 
 .html
@@ -45,7 +45,7 @@
 #menuu136
 {
 	z-index: 407;
-	width: 699px;
+	width: 586px;
 	top: -1px;
 	left: 50%;
 	margin-left: -266px;
@@ -242,76 +242,12 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u1528
-{
-	width: 111px;
-	min-height: 50px;
-	margin-right: -10000px;
-	left: 247px;
-}
-
-#u1529
-{
-	width: 111px;
-	padding-bottom: 31px;
-}
-
-#u1529:hover
-{
-	width: 111px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1529.MuseMenuActive
-{
-	width: 111px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1532-4
-{
-	width: 104px;
-	min-height: 19px;
-	margin-right: -10000px;
-	top: 15px;
-	left: 3px;
-}
-
-#u1529:hover #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1529:active #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1529.MuseMenuActive #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
 #u165
 {
 	width: 103px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 360px;
+	left: 247px;
 }
 
 #u168
@@ -375,7 +311,7 @@
 	width: 70px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 465px;
+	left: 352px;
 }
 
 #u145
@@ -439,7 +375,7 @@
 	width: 113px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 537px;
+	left: 424px;
 }
 
 #u161
@@ -503,7 +439,7 @@
 	width: 47px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 652px;
+	left: 539px;
 }
 
 #u173
@@ -564,7 +500,7 @@
 
 #u1437
 {
-	z-index: 486;
+	z-index: 480;
 	width: 34px;
 	margin-left: 27px;
 }
@@ -764,7 +700,7 @@
 
 #u321-4
 {
-	z-index: 456;
+	z-index: 450;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -781,7 +717,7 @@
 
 #u334-26
 {
-	z-index: 460;
+	z-index: 454;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
