--- a/css/resources.css
+++ b/css/resources.css
@@ -1,7 +1,7 @@
 .version.resources /* version checker */
 {
-	color: #0000FC;
-	background-color: #F4CE4C;
+	color: #00001F;
+	background-color: #48DDD2;
 }
 
 .html
@@ -44,7 +44,7 @@
 #menuu136
 {
 	z-index: 160;
-	width: 699px;
+	width: 586px;
 	top: -1px;
 	left: 50%;
 	margin-left: -266px;
@@ -241,76 +241,12 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u1528
-{
-	width: 111px;
-	min-height: 50px;
-	margin-right: -10000px;
-	left: 247px;
-}
-
-#u1529
-{
-	width: 111px;
-	padding-bottom: 31px;
-}
-
-#u1529:hover
-{
-	width: 111px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1529.MuseMenuActive
-{
-	width: 111px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1532-4
-{
-	width: 104px;
-	min-height: 19px;
-	margin-right: -10000px;
-	top: 15px;
-	left: 3px;
-}
-
-#u1529:hover #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1529:active #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1529.MuseMenuActive #u1532-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 0px -10000px 0px 0px;
-}
-
 #u165
 {
 	width: 103px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 360px;
+	left: 247px;
 }
 
 #u168
@@ -374,7 +310,7 @@
 	width: 70px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 465px;
+	left: 352px;
 }
 
 #u145
@@ -438,7 +374,7 @@
 	width: 113px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 537px;
+	left: 424px;
 }
 
 #u161
@@ -502,7 +438,7 @@
 	width: 47px;
 	min-height: 50px;
 	margin-right: -10000px;
-	left: 652px;
+	left: 539px;
 }
 
 #u173
@@ -563,7 +499,7 @@
 
 #u1437
 {
-	z-index: 239;
+	z-index: 233;
 	width: 34px;
 	margin-left: 27px;
 }
@@ -786,7 +722,7 @@
 
 #u321-4
 {
-	z-index: 209;
+	z-index: 203;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -803,7 +739,7 @@
 
 #u334-26
 {
-	z-index: 213;
+	z-index: 207;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
