--- a/css/publications.css
+++ b/css/publications.css
@@ -1,7 +1,7 @@
 .version.publications /* version checker */
 {
-	color: #000007;
-	background-color: #78B9B0;
+	color: #0000E8;
+	background-color: #C227FE;
 }
 
 .html
@@ -48,7 +48,7 @@
 
 #u1437
 {
-	z-index: 910;
+	z-index: 909;
 	width: 34px;
 	margin-right: -10000px;
 	margin-top: 5px;
@@ -64,7 +64,7 @@
 
 #u322-3
 {
-	z-index: 834;
+	z-index: 833;
 	width: 680px;
 	min-height: 50px;
 	top: 0px;
@@ -74,7 +74,7 @@
 
 #menuu136
 {
-	z-index: 837;
+	z-index: 836;
 	width: 586px;
 	top: -1px;
 	left: 50%;
@@ -544,7 +544,7 @@
 	position: relative;
 }
 
-#u1291-17
+#u1291-16
 {
 	z-index: 801;
 	width: 639px;
@@ -589,7 +589,7 @@
 
 #u1334
 {
-	z-index: 832;
+	z-index: 831;
 	width: 83px;
 	background-color: transparent;
 	position: relative;
@@ -598,7 +598,7 @@
 
 #u1328
 {
-	z-index: 830;
+	z-index: 829;
 	width: 83px;
 	background-color: transparent;
 	position: relative;
@@ -608,7 +608,7 @@
 
 #u1322
 {
-	z-index: 828;
+	z-index: 827;
 	width: 81px;
 	background-color: transparent;
 	position: relative;
@@ -618,7 +618,7 @@
 
 #u1316
 {
-	z-index: 826;
+	z-index: 825;
 	width: 71px;
 	background-color: transparent;
 	position: relative;
@@ -628,7 +628,7 @@
 
 #u1310
 {
-	z-index: 824;
+	z-index: 823;
 	width: 80px;
 	background-color: transparent;
 	position: relative;
@@ -638,7 +638,7 @@
 
 #u1304
 {
-	z-index: 822;
+	z-index: 821;
 	width: 82px;
 	background-color: transparent;
 	position: relative;
@@ -648,7 +648,7 @@
 
 #u1298
 {
-	z-index: 820;
+	z-index: 819;
 	width: 78px;
 	background-color: transparent;
 	position: relative;
@@ -658,7 +658,7 @@
 
 #u1292
 {
-	z-index: 818;
+	z-index: 817;
 	width: 78px;
 	background-color: transparent;
 	position: relative;
@@ -725,7 +725,7 @@
 	margin-bottom: 70px;
 }
 
-#u1291-14,#u1291-15,#u820-23,#u820-55,#u820-56,#u820-576,#u820-577
+#u1291-14,#u820-23,#u820-55,#u820-56,#u820-576,#u820-577
 {
 	font-size: 16px;
 	text-decoration: none;
@@ -771,7 +771,7 @@
 
 #u321-4
 {
-	z-index: 880;
+	z-index: 879;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -788,7 +788,7 @@
 
 #u334-26
 {
-	z-index: 884;
+	z-index: 883;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
