--- a/css/gca.css
+++ b/css/gca.css
@@ -1,7 +1,7 @@
 .version.gca /* version checker */
 {
-	color: #000004;
-	background-color: #42E4BE;
+	color: #000016;
+	background-color: #7B45FE;
 }
 
 .html
@@ -34,21 +34,6 @@
 	margin-left: -340px;
 }
 
-#pu1437
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 5px;
-	margin-left: 20px;
-}
-
-#u1437
-{
-	z-index: 160;
-	width: 34px;
-	margin-left: 7px;
-}
-
 #u1387
 {
 	z-index: 2;
@@ -57,8 +42,10 @@
 	border-style: solid;
 	border-color: #000000;
 	background-color: #F7FFFF;
-	margin-top: 27px;
 	position: relative;
+	margin-right: -10000px;
+	margin-top: 71px;
+	left: 20px;
 	padding: 4px 6px 7px 7px;
 }
 
@@ -81,8 +68,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	filter: alpha(opacity=50);
 	color: #000000;
-	font-size: 11px;
 	line-height: 13px;
+	font-size: 11px;
 	left: -1px;
 	margin-top: 1px;
 	position: relative;
@@ -119,6 +106,24 @@
 #u1378,#u1378-3,#u1378-26,#u1378-43,#u1378-56
 {
 	font-weight: bold;
+}
+
+#pu1437
+{
+	width: 0.01px;
+	padding-bottom: 50px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	margin-left: 27px;
+}
+
+#u1437
+{
+	z-index: 160;
+	width: 34px;
+	top: 6px;
+	left: 50%;
+	margin-left: -313px;
 }
 
 #menuu136
