--- a/css/lab-members.css
+++ b/css/lab-members.css
@@ -1,7 +1,7 @@
 .version.lab_members /* version checker */
 {
-	color: #0000FD;
-	background-color: #7115CA;
+	color: #00000E;
+	background-color: #0F5EEF;
 }
 
 .html
@@ -13,14 +13,13 @@
 {
 	z-index: 1;
 	width: 680px;
-	min-height: 498.9499999999998px;
+	min-height: 499px;
 	-pie-box-shadow: 0px 0px 10px 3px #E5E5E5;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 0px 10px rgba(0,0,0,0.1);
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -28,7 +27,7 @@
 #page_position_content
 {
 	margin-bottom: -15px;
-	padding-top: 5px;
+	padding-top: 59px;
 	width: 0.01px;
 }
 
@@ -502,7 +501,9 @@
 {
 	z-index: 395;
 	width: 34px;
-	margin-left: 27px;
+	top: 6px;
+	left: 50%;
+	margin-left: -313px;
 }
 
 #u394-4
@@ -512,12 +513,11 @@
 	min-height: 34px;
 	background-color: transparent;
 	color: #14988B;
+	line-height: 31px;
 	text-align: center;
 	font-size: 26px;
-	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
-	margin-top: 15px;
 	position: relative;
 }
 
@@ -529,6 +529,7 @@
 	background-color: transparent;
 	color: #000000;
 	margin-left: 20px;
+	margin-top: 1px;
 	position: relative;
 }
 
