--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -36,9 +36,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -84,9 +84,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -132,9 +132,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -180,9 +180,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -228,9 +228,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -276,9 +276,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -300,7 +300,7 @@
 	filter: alpha(opacity=100);
 }
 
-#u1437,#u1394,#u151,#u237,#u165,#u144,#u158,#u172
+#u1394,#u151,#u237,#u165,#u144,#u158,#u172
 {
 	background-color: transparent;
 	position: relative;
@@ -337,9 +337,9 @@
 	border-color: transparent;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: open-sans, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -374,13 +374,19 @@
 	cursor: pointer;
 }
 
+#u1437
+{
+	background-color: transparent;
+	position: fixed;
+}
+
 #u321-4
 {
 	background-color: transparent;
 	color: #7F7F7F;
+	line-height: 11px;
 	text-align: left;
 	font-size: 9px;
-	line-height: 11px;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	font-style: italic;
 	position: relative;
@@ -396,9 +402,9 @@
 {
 	background-color: transparent;
 	color: #7F7F7F;
+	line-height: 11px;
 	text-align: right;
 	font-size: 9px;
-	line-height: 11px;
 	font-style: italic;
 	position: relative;
 }
